--- a/views/addressList.twig
+++ b/views/addressList.twig
@@ -47,100 +47,7 @@
     </ul>
   </li>
 
-<!-- Modal  to add address -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Add Address</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon1">Number</span>
-            </div>
-            <input type="text" class="form-control" name="streetNumber" value="" placeholder="Enter street number" aria-label="streetNumber" aria-describedby="basic-addon1">
-          </div>
-          <div class="form-group mb-3">
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Add a note like 'has 12 units' etc..."></textarea>
-          </div>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon2">Street</span>
-            </div>
-            <input type="text" class="form-control" name="streetName" value="{{ street }}" placeholder="Enter street name" aria-label="streetName" aria-describedby="basic-addon2">
-          </div>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon3">Block</span>
-            </div>
-            <input type="text" class="form-control" name="blockNumber" value="{{ blockNumber }}"placeholder="Enter block number" aria-label="blockNumber" aria-describedby="basic-addon1">
-          </div>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon4">Name</span>
-            </div>
-            <input type="text" class="form-control" name="firstName" value="" placeholder="Enter first name" aria-label="firstName" aria-describedby="basic-addon4">
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-outline-primary" disabled>Save Address</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Modal  to delete address -->
-<div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel1">Delete Address</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon1">Number</span>
-            </div>
-            <input type="text" class="form-control" name="streetNumber" value="" placeholder="Enter street number" aria-label="streetNumber" aria-describedby="basic-addon1">
-          </div>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon2">Street</span>
-            </div>
-            <input type="text" class="form-control" name="streetName" value="{{ street }}" placeholder="Enter street name" aria-label="streetName" aria-describedby="basic-addon2">
-          </div>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon3">Block</span>
-            </div>
-            <input type="text" class="form-control" name="blockNumber" value="{{ blockNumber }}"placeholder="Enter block number" aria-label="blockNumber" aria-describedby="basic-addon1">
-          </div>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon4">Name</span>
-            </div>
-            <input type="text" class="form-control" name="firstName" value="" placeholder="Enter first name" aria-label="firstName" aria-describedby="basic-addon4">
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-outline-danger" disabled>Delete Address</button>
-      </div>
-    </div>
-  </div>
-</div>
+{% include 'modal-forms.twig' %}
 
 <ul class="list-group">
   {% for address in addresses %}
@@ -197,4 +104,5 @@
   {% endfor %}
 </ul>
 
-          
+
+        
