--- a/views/addressList.twig
+++ b/views/addressList.twig
@@ -33,19 +33,20 @@
         </div>
     </div>
   </li>
-   <li class="nav-item">
+   -<li class="nav-item">
       <!-- Example single danger button -->
     <div class="btn-group">
       <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Action
       </button>
       <div class="dropdown-menu dropdown-menu-right">
-        <a class="dropdown-item" href="#exampleModal" data-toggle="modal" data-target="#exampleModal">Add address</a>
-        <a class="dropdown-item" href="#exampleModal1" data-toggle="modal" data-target="#exampleModal1">Delete address</a>
-        <a class="dropdown-item disabled" href="#">Add DNC</a>
+        <a class="dropdown-item" href="#exampleModal1" data-toggle="modal" data-target="#exampleModal1">Add address</a>
+        <a class="dropdown-item" href="#exampleModal2" data-toggle="modal" data-target="#exampleModal2">Delete address</a>
+        <a class="dropdown-item" href="#exampleModal3" data-toggle="modal" data-target="#exampleModal3">Add DNC</a>
       </div>
-    </ul>
-  </li>
+    </li>
+</ul>
+
 
 {% include 'modal-forms.twig' %}
 
