--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -44,11 +44,12 @@
         <li class="nav-item">
         <a class="nav-link" href="admin/s-13.php">S-13</a>
         </li>
+        <li class="nav-item">
+        <a class="nav-link" href="admin/address-change-log.php">Change Log</a>
+        </li>
         
       <!--
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Account</a>
-      </li>
+      
       <li class="nav-item">
         <a class="nav-link" href="signout.php">Sign out</a>
       </li>-->
