Add coverage type option: Campaign

--- a/views/admin/mapList.twig
+++ b/views/admin/mapList.twig
@@ -114,6 +114,7 @@
 					    <option value="First pass">First pass</option>
 					    <option value="Not at Homes">Not at Homes</option>
 					    <option value="Phone">Phone</option>
+					    <option value="Campaign">Campaign</option>
 					  </select>
 					</div>
 					
