--- a/views/availableMaps.twig
+++ b/views/availableMaps.twig
@@ -1,3 +1,8 @@
+  <figure class="figure">
+    <img src="https://assetsnffrgf-a.akamaihd.net/assets/m/502019404/univ/art/502019404_univ_lss_lg.jpg" class="figure-img img-fluid rounded" alt="Memorial Invitation Campaign.">
+    <figcaption class="figure-caption text-right pr-2">Memorial Invitation Campaign</figcaption>
+  </figure>
+
 <!-- Consider using list group button or link instead -->
   <ul class="list-group">
 	{% for map in availableMaps %}
