--- a/views/mapBlocks.twig
+++ b/views/mapBlocks.twig
@@ -16,9 +16,10 @@
   <div class="card">
     <div class="card-header" id="heading{{ mapBlock.Block }}">
       <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{ mapBlock.Block }}" aria-expanded="true" aria-controls="collapse{{ mapBlock.Block }}" ic-get-from="block-streets.php?Map={{ mapNumber}}&Block={{ mapBlock.Block }}" ic-target="#card-body{{ mapBlock.Block }}">
-          Block {{ mapBlock.Block }}
-        </button>
+        <!--<button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{ mapBlock.Block }}" aria-expanded="true" aria-controls="collapse{{ mapBlock.Block }}" ic-get-from="block-streets.php?Map={{ mapNumber}}&Block={{ mapBlock.Block }}" ic-target="#card-body{{ mapBlock.Block }}">
+          foo Block {{ mapBlock.Block }}
+        </button>-->
+        Block {{ mapBlock.Block }}
         <span class="badge badge-pill badge-secondary">{{ mapBlock.blockToContact }}</span>
         {% if mapBlock.isDone %}
           <input type="checkbox" disabled checked>
