--- a/views/addressList.twig
+++ b/views/addressList.twig
@@ -7,12 +7,12 @@
         Block {{ blockNumber}}
       </a>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-      {% for mapBlock in mapBlocks %}
-        <a class="dropdown-item" href="?Map={{ mapNumber }}&Block={{ mapBlock.Block }}&Filter={{ Filter }}">
+        {% for mapBlock in mapBlocks %}
+        <a class="dropdown-item" href="index.php?Map={{ mapNumber }}&Block={{ mapBlock.Block }}">
           Block {{ mapBlock.Block }} [{{ mapBlock.blockToContact }}] 
         </a>
-      {% endfor %} 
-        </div>
+        {% endfor %} 
+      </div>
     </div>
   </li>
   <li class="nav-item">
@@ -33,7 +33,7 @@
         </div>
     </div>
   </li>
-   -<li class="nav-item">
+  <li class="nav-item">
       <!-- Example single danger button -->
     <div class="btn-group">
       <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -46,7 +46,6 @@
       </div>
     </li>
 </ul>
-
 
 {% include 'modal-forms.twig' %}
 
