--- a/views/update_housing_unit.html.twig
+++ b/views/update_housing_unit.html.twig
@@ -3,7 +3,7 @@
   Unit {{ unitNumber }}
 </a>
 <div class="float-right">
-  <small><i>At home {{ Date|date("D d M") }}</i></small>
+  <!--<small><i>At home {{ Date|date("D d M") }}</i></small>-->
     <div class="collapse" id="revert-unit-{{ unitID }}">
       <button onclick="updateHousingUnit('{{ unitID }}', '', '', '{{ streetNumber }}-unit-{{ unitNumber }}')" class="btn btn-outline-secondary btn-sm">
         Clear at home date
