--- a/views/addressList.twig
+++ b/views/addressList.twig
@@ -58,7 +58,7 @@
           {{ address.streetNumber }} {{ address.streetName }}    
         </a>
         <div class="float-right">
-            <small><i>At home {{ address.modDate|date("D d M") }}</i></small>
+            <!--<small><i>At home {{ address.modDate|date("D d M") }}</i></small>-->
           <div class="collapse" id="revert-{{ address.recID }}">
             <button onclick="updateAtHome({{ address.recID }},)" id="{{ address.recID }}" class="btn btn-outline-primary btn-sm">Clear at home date</button>
           </div>
