button color change
Change creset button colour and label

--- a/views/addressList.twig
+++ b/views/addressList.twig
@@ -60,7 +60,7 @@
         <div class="float-right">
             <!--<small><i>At home {{ address.modDate|date("D d M") }}</i></small>-->
           <div class="collapse" id="revert-{{ address.recID }}">
-            <button onclick="updateAtHome({{ address.recID }},)" id="{{ address.recID }}" class="btn btn-outline-primary btn-sm">Clear at home date</button>
+            <button onclick="updateAtHome({{ address.recID }},)" id="{{ address.recID }}" class="btn btn-outline-danger btn-sm">Not At Home</button>
           </div>
         </div>
       </li>
