--- a/views/update_housing_unit.html.twig
+++ b/views/update_housing_unit.html.twig
@@ -5,8 +5,8 @@
 <div class="float-right">
   <!--<small><i>At home {{ Date|date("D d M") }}</i></small>-->
     <div class="collapse" id="revert-unit-{{ unitID }}">
-      <button onclick="updateHousingUnit('{{ unitID }}', '', '', '{{ streetNumber }}-unit-{{ unitNumber }}')" class="btn btn-outline-secondary btn-sm">
-        Clear at home date
+      <button onclick="updateHousingUnit('{{ unitID }}', '', '', '{{ streetNumber }}-unit-{{ unitNumber }}')" class="btn btn-outline-danger btn-sm">
+        Not At Home
       </button>
     </div>
 </div>
