--- a/views/addressList.twig
+++ b/views/addressList.twig
@@ -1,4 +1,3 @@
-
 <!-- Nav: block, street and filter -->  
  <ul class="nav">
   <li class="nav-item">
@@ -94,17 +93,10 @@
         </div>
       </li> 
     {% elseif address.cStatus == 'HousingUnits' %}
-       <!-- Housing Units -->
-       <!-- <li id="Map-99-Block-88" class="list-group-item list-group-item-primary">
-        <a  href="ah.php?Map=99&Block=88" role="button">
-        {{ address.streetNumber }} {{ address.streetName }}    
-        </a>
-        <span class="badge badge-light">{{ address.cUnitsCount }} units</span>
-        <span class="badge badge-pill badge-secondary">{{ address.UnitsNH }}</span>
-      </li> -->
+      <!-- Housing Units -->
       <li id="{{ address.recID }}" class="list-group-item list-group-item-primary">
-        <a onclick="loadHousingUnits('{{ address.recID }}', 'Contacted', '{{ address.streetNumber }}-{{ address.streetNameWithDash }}-units')" data-toggle="collapse" href="#{{ address.streetNumber }}-{{ address.streetNameWithDash }}-units" role="button" aria-expanded="false" aria-controls="{{ address.streetNumber }}-{{ address.streetNameWithDash }}-units">
-        {{ address.streetNumber }} {{ address.streetName }}
+        <a ic-get-from="HousingUnits.php?id={{ address.recID }}" ic-target="#{{ address.streetNumber }}-{{ address.streetNameWithDash }}-units" href="#{{ address.streetNumber }}-{{ address.streetNameWithDash }}-units" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="{{ address.streetNumber }}-{{ address.streetNameWithDash }}-units">
+          {{ address.streetNumber }} {{ address.streetName }}
         </a>
         <span class="badge badge-light">{{ address.cUnitsCount }} units</span>
         <span class="badge badge-pill badge-secondary">{{ address.UnitsNH }}</span>
