switch to checkbo

--- a/views/housing_units.html.twig
+++ b/views/housing_units.html.twig
@@ -1,32 +1,46 @@
 <ul class="list-group">
   {% for housing_unit in housing_units %}
   	{% if housing_unit.cStatus == 'ah' %}
-  		<li class="list-group-item list-group-item-light" id="{{ streetNumber }}-unit-{{ housing_unit.Number }}">
-          <a data-toggle="collapse" href="#revert-unit-{{ housing_unit.unitID }}" role="button" aria-expanded="false" aria-controls="revert-unit-{{ housing_unit.unitID }}">
-		    Unit {{ housing_unit.Number }}
-		  </a>
-		  <div class="float-right">
-			  <!--<small><i>At home {{ housing_unit.Date|date("D d M") }}</i></small>-->
-			  <div class="collapse" id="revert-unit-{{ housing_unit.unitID }}">
-			    <button onclick="updateHousingUnit('{{ housing_unit.unitID }}', '', '', '{{ streetNumber }}-unit-{{ housing_unit.Number }}')" class="btn btn-outline-danger btn-sm">
-			      Not At Home
-			    </button>
-			  </div>
-		  </div>
-	    </li>
-  	{% elseif housing_unit.cStatus == 'DNC' %}
-  	  <li class="list-group-item list-group-item-danger" id="{{ streetNumber }}-unit-{{ housing_unit.Number }}">
-        Unit {{ housing_unit.Number }}
-	    <div class="float-right">
-	      <button type="button" class="btn btn-outline-danger btn-sm" disabled>Do Not Call</button>
-	    </div>
+  	  <!-- Contacted -->
+      <li id="{{ streetNumber }}-unit-{{ housing_unit.Number }}" class="list-group-item list-group-item-light">
+        <form id="{{ housing_unit.unitID }}-form">
+          <input type="hidden" name="id" value="{{ housing_unit.unitID }}">
+          <input type="hidden" name="notHome" value="">
+          <input type="hidden" name="streetNumber" value="{{ streetNumber }}">
+          <input type="hidden" name="housingUnitNumber" value="{{ housing_unit.Number }}">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="{{ housing_unit.unitID }}-checkbox" ic-post-to="updateUnitStatus.php" ic-target="#{{ streetNumber }}-unit-{{ housing_unit.Number }}" ic-confirm="Are you sure?" checked>
+            <label class="form-check-label" for="defaultCheck1">
+              Unit {{ housing_unit.Number }} {{ housing_unit.cStatus }}        
+            </label>
+          </div>
+        </form>
+      </li>
+  	{% elseif housing_unit.cStatus == 'dnc' %}
+  	  <!-- DNC -->
+  	  <li id="{{ streetNumber }}-unit-{{ housing_unit.Number }}" class="list-group-item list-group-item-light">
+  	    <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="{{ address.recID }}-checkbox" disabled>
+          <label class="form-check-label" for="defaultCheck1">
+            <span class="badge badge-danger">DNC</span> Unit {{ housing_unit.Number }}
+          </label>
+        </div>        
   	{% else %}
-  	  <li class="list-group-item list-group-item-light" id="{{ streetNumber }}-unit-{{ housing_unit.Number }}">
-        Unit {{ housing_unit.Number }}
-	    <div class="float-right">
-	      <button onclick="updateHousingUnit('{{ housing_unit.unitID }}', 'ah', '', '{{ streetNumber }}-unit-{{ housing_unit.Number }}')" class="btn btn-outline-secondary btn-sm">At Home</button>
-	    </div>
-	  </li>
+  	  <!-- Default: Not contacted yet -->
+      <li id="{{ streetNumber }}-unit-{{ housing_unit.Number }}" class="list-group-item list-group-item-light">
+        <form id="{{ housing_unit.unitID }}-form">
+	      <input type="hidden" name="id" value="{{ housing_unit.unitID }}">
+	      <input type="hidden" name="isHome" value="">
+	      <input type="hidden" name="streetNumber" value="{{ streetNumber }}">
+	      <input type="hidden" name="housingUnitNumber" value="{{ housing_unit.Number }}">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="{{ housing_unit.unitID }}-checkbox" ic-post-to="updateUnitStatus.php" ic-target="#{{ streetNumber }}-unit-{{ housing_unit.Number }}">
+            <label class="form-check-label" for="defaultCheck1">
+              Unit {{ housing_unit.Number }} {{ housing_unit.cStatus }}
+            </label>
+          </div>
+        </form>
+      </li>
   	{% endif %}
   {% endfor %}
 </ul>
