use https for map images

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -90,17 +90,17 @@
 
 {% if addresses %}
   <div class="text-center">
-    <img src="http://skyricho.github.io/img/maps/{{ mapNumber }}.jpg" class="img-fluid">
+    <img src="https://skyricho.github.io/img/maps/{{ mapNumber }}.jpg" class="img-fluid">
   </div> 
   {% include 'addressList.twig' %}
 {% elseif blockNumber %}
   <div class="text-center">
-    <img src="http://skyricho.github.io/img/maps/{{ mapNumber }}.jpg" class="img-fluid">
+    <img src="https://skyricho.github.io/img/maps/{{ mapNumber }}.jpg" class="img-fluid">
   </div>
    {% include 'streetList.twig' %}
 {% elseif mapNumber %}
   <div class="text-center">
-    <img src="http://skyricho.github.io/img/maps/{{ mapNumber }}.jpg" class="img-fluid">
+    <img src="https://skyricho.github.io/img/maps/{{ mapNumber }}.jpg" class="img-fluid">
   </div>
   {% include 'mapBlocks.twig' %}
 {% endif %} 
