map images. Use https

--- a/views/admin/mapList.twig
+++ b/views/admin/mapList.twig
@@ -152,7 +152,7 @@
 		      Map
 		    </div>
 		    <div class="card-body">
-		      <img src="http://skyricho.github.io/img/maps/{{ map.Map }}.jpg" class="img-fluid" alt="Map {{ map.Map }}">
+		      <img src="https://skyricho.github.io/img/maps/{{ map.Map }}.jpg" class="img-fluid" alt="Map {{ map.Map }}">
 		      <!--<div class="text-center">
                 <img src="http://skyricho.github.io/img/maps/{{ map.Map }}.jpg" class="img-fluid" alt="Map {{ map.Map }}">-->
               </div>
