Add image for memorial 2020

--- a/views/availableMaps.twig
+++ b/views/availableMaps.twig
@@ -1,6 +1,15 @@
   <figure class="figure">
-    <img src="img/jw2019_Primary_Logo_700.png" class="figure-img img-fluid rounded" alt="2019 Melbourne International Convention Campaign.">
-    <figcaption class="figure-caption text-right pr-2">International Convention Invitation Campaign</figcaption>
+    <img srcset="
+      img/memorial_2020_206.jpg   206w,
+      img/memorial_2020_412.jpg   412w,
+      img/memorial_2020_828.jpg   828w,
+      img/memorial_2020_1140.jpg 1140w"
+
+      src="img/memorial_2020_1140.jpg"
+      class="img-fluid"
+      alt="Image of Item {{ itemId }}">
+    <!--<img src="img/memorial_2020_1140.jpg" class="figure-img img-fluid rounded" alt="2019 Melbourne International Convention Campaign.">-->
+    <figcaption class="figure-caption text-right pr-2">2020 Memorial Invitation Campaign.</figcaption>
   </figure>
 
 <!-- Consider using list group button or link instead -->
