--- a/views/mapBlocks.twig
+++ b/views/mapBlocks.twig
@@ -32,4 +32,5 @@
     </div>
   </div>
   {% endfor %}
+  <div class="container" ic-get-from="dnc-list.php?Map={{ mapNumber }}" ic-trigger-on="load"></div>
 </div>
