--- a/views/phone/index.html.twig
+++ b/views/phone/index.html.twig
@@ -18,9 +18,15 @@
       <!--<li class="nav-item">
         <a class="nav-link disabled" href="#">Account</a>
       </li>-->
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="../">Back to At Homes</a>
-      </li>
+      </li>-->
+      <li class="nav-item">
+        <a class="nav-link" href="whatsapp://chat?code=ALhU5zMyOlu82xhiHwi8UV">Help (WhatsApp Group)</a>
+      </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="admin/?Filter=assigned">Admin</a>
+      </li> 
     </ul>
   </div>
 {% endblock %}
