Navbar bg to info (green)

--- a/views/base.html
+++ b/views/base.html
@@ -13,7 +13,7 @@
     {% endblock %}
   </head>
   <body>
-      <nav class="navbar navbar-dark bg-secondary">
+      <nav class="navbar navbar-dark bg-info">
       {% block Navbar %}
         <a class="navbar-brand" href="index.php">At Homes</a>
       {% endblock %}
