update relative location for /admin

--- a/views/phone/index.html.twig
+++ b/views/phone/index.html.twig
@@ -25,7 +25,7 @@
         <a class="nav-link" href="whatsapp://chat?code=ALhU5zMyOlu82xhiHwi8UV">Help (WhatsApp Group)</a>
       </li> 
       <li class="nav-item">
-        <a class="nav-link" href="admin/?Filter=assigned">Admin</a>
+        <a class="nav-link" href="../admin/?Filter=assigned">Admin</a>
       </li> 
     </ul>
   </div>
