--- a/views/base.html
+++ b/views/base.html
@@ -8,7 +8,7 @@
 
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  
+      <script src="https://kit.fontawesome.com/94cb094786.js" crossorigin="anonymous"></script> 
       <title>{% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
