--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -16,9 +16,9 @@
         <li class="nav-item">
         <a class="nav-link" href="whatsapp://chat?code=ALhU5zMyOlu82xhiHwi8UV">Help (WhatsApp Group)</a>
         </li> 
-        <li class="nav-item">
+        <!--<li class="nav-item">
         <a class="nav-link" href="phone">Phone Calls</a>
-        </li>
+        </li>-->
          <li class="nav-item">
         <a class="nav-link" href="admin/?Filter=assigned">Admin</a>
         </li>
