Fix option value error in assign map form

--- a/views/admin/mapList.twig
+++ b/views/admin/mapList.twig
@@ -128,7 +128,7 @@
 					    <option value="First pass">First pass</option>
 					    <option value="Not at Homes">Not at Homes</option>
 					    <option value="Phone">Phone</option>
-					    <option value="Phone">Letter</option>
+					    <option value="Letter">Letter</option>
 					    <option value="Campaign">Campaign</option>
 					  </select>
 					</div>
