--- a/views/phone/addressList.twig
+++ b/views/phone/addressList.twig
@@ -27,8 +27,8 @@
 <ul class="list-group">
   {% for address in addresses %}
       <li id="{{ address.recID }}" class="list-group-item">
-        <a data-toggle="collapse" href="#revert-{{ address.recID }}" role="button" aria-expanded="false" aria-controls="revert-{{ address.recID }}" ic-get-from="person-lookup.php?q={{ address.streetNumber }}+{{ address.streetNameOnly }}+{{ address.postCode }}" ic-target="#{{ address.recID }}-phone-numbers">
-          {{ address.streetNumber }} {{ address.streetName }}
+        <a data-toggle="collapse" href="#revert-{{ address.recID }}" role="button" aria-expanded="false" aria-controls="revert-{{ address.recID }}" ic-get-from="person-lookup.php?q={{ address.streetNumber }}+{{ address.streetNameOnly }}+{{ address.postCode }}" ic-indicator="#demo-spinner-{{ address.recID }}" ic-target="#{{ address.recID }}-phone-numbers">
+          {{ address.streetNumber }} {{ address.streetName }} 
         </a>
         <div class="float-right" id="{{ address.recID }}-status"><span class="badge badge-{{ address.badgeColour }}">{{ address.status }}</span></div>
         <div class="collapse card mt-2 mb-5" id="revert-{{ address.recID }}">
@@ -49,6 +49,8 @@
             </div>
           </div>
           </form>
+
+          <i id="demo-spinner-{{ address.recID }}" class="fa fa-spinner fa-spin" style="display:none"></i>
 
           {% include 'phone/phone-numbers.twig' %}
           <div class="mt-3" id="{{ address.recID }}-phone-numbers"></div>          
